
ADD_LIBRARY( getch SHARED getch.c )
TARGET_LINK_LIBRARIES( getch ${COMMLIBS} )
SET_TARGET_PROPERTIES( getch PROPERTIES PREFIX "" )
INSTALL_TARGETS( ${LIBRARY_INST} getch )

ADD_LIBRARY( serial SHARED luaserial.c )
TARGET_LINK_LIBRARIES( serial ${COMMLIBS} )
SET_TARGET_PROPERTIES( serial PROPERTIES PREFIX "" )
INSTALL_TARGETS( ${LIBRARY_INST} serial )

ADD_LIBRARY( stty SHARED luastty.cpp )
TARGET_LINK_LIBRARIES( stty ${COMMLIBS} )
SET_TARGET_PROPERTIES( stty PROPERTIES PREFIX "" )
INSTALL_TARGETS( ${LIBRARY_INST} stty )

ADD_LIBRARY( unix SHARED luaunix.c)
TARGET_LINK_LIBRARIES( unix ${COMMLIBS} )
SET_TARGET_PROPERTIES( unix PROPERTIES PREFIX "" )
INSTALL_TARGETS( ${LIBRARY_INST} unix )

