
IF ( WEBOTS )
	FIND_PACKAGE( Webots REQUIRED )
	ADD_LIBRARY( controller SHARED controller_wrap.c )
	INCLUDE_DIRECTORIES( ${WEBOTS_INCLUDE_C_DIR} )
	TARGET_LINK_LIBRARIES( controller ${COMMLIBS} ${WEBOTS_LIBRARY_C} )
	SET_TARGET_PROPERTIES( controller PROPERTIES PREFIX "" )
	INSTALL_TARGETS( ${LIBRARY_INST} controller )
	INSTALL_FILES( ${WEBOTSCONTROLLER_INST} lua_set.sh )
	INSTALL_FILES( ${WEBOTSCONTROLLER_INST} start.lua )
ENDIF( WEBOTS )
